# nelomai-panel

./: .env.example  .gitignore  ROADMAP.md  alembic.ini  pyproject.toml
app/: __init__.py  config.py  main.py  models.py  runtime_schema.py  schemas.py  security.py  serializers.py  services.py  version.py  web.py
app/static/: app.js  (+1 more)
docs/: agent_contract.md  agent_contract_quickref.md  node_agent_live_validation.md  node_agent_runtime_model.md  panel_beta_runbook.md  panel_server_inventory.md  panel_server_release_checklist.md  panel_server_runbook.md  release_gates.md  release_remaining_gaps.md
migrations/: env.py
scripts/: agent_contract_check.py  agent_contract_doc_check.py  amnezia_official_tool_check.py  clean_start_check.py  config_check.py  data_flow_check.py  encoding_check.py  fake_amnezia_tool.py  fake_amnezia_tool_module.js  fake_peer_agent.py  first_admin_bootstrap_check.py  install_panel_server.sh  integrity_check.py  live_fix_agent_daemon_remote.sh  live_panel_tak_backoff_check.py  live_panel_tak_clear_backoff_check.py  live_panel_tak_fallback_check.py  live_panel_tak_health_workflow_check.py  live_panel_tak_manual_repair_check.py  live_panel_tak_partial_repair_check.py  live_panel_tak_rotation_check.py  live_panel_tak_switch_check.py  live_remote_peer_agent_bridge.py  live_safe_init_remote.sh  live_sync_git_remote.sh  live_tunnel_remote_check.py  live_verify_interface_lifecycle_remote.sh  migration_check.py  node_agent_bridge_check.py  node_agent_full_profile_check.py  node_agent_live_validation_check.py  node_agent_panel_bootstrap_profiles_check.py  (+40 more)
(+32 files in other folders)
